--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -98,9 +98,15 @@
 
                     <!-- Modal body -->
                     <div class="modal-body">
-                        <p>To validate <strong id="validationModalTexts">Garbage (EUW)</strong>, set your third-party validation code to the following:</p>
-                        <blockquote id="ValidationCodeText" class="blockquote text-center">82BOX</blockquote>
-                        <p>Once your code is , validation will typically happen in an hour or two.</p>
+                        <p class="mb-0">To validate <strong id="validationModalTexts">Garbage (EUW)</strong>, <a href="#validationExampleCollapse" id="videoExampleToggle" data-toggle="collapse">set your third-party validation code</a> to the following:</p>
+                        <blockquote id="validationCodeText" class="blockquote text-center">82BOX</blockquote>
+                        <p>Once your code is set, validation will typically happen in an hour or two.</p>
+                        <div id="validationExampleCollapse" class="collapse">
+                            <p> <strong>Settings > Verification ></strong> set the code then hit <strong>Save</strong>. It might take a few tries. If you keep getting an error, try it after you've restarted your client.</p>
+                            <video id="verificationVideo" width="465" autoplay="autoplay" loop="lopp">
+                                <source src="/video/verification.mp4" type="video/mp4" />
+                            </video>
+                        </div>
                     </div>
                 </div>
             </div>
