--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
 
             <!-- Footer -->
             <footer class="footer d-flex flex-row-reverse w-100 bg-dark p-2 mt-auto">
-                <p class="text-muted mr-1 mb-0">Something bugged? Discord: Thorasine#4073, Reddit: /u/Thorasine</p>
+                <p class="text-muted mr-1 mb-0">Something bugged? Send a report: Discord: Thorasine#4073, Reddit: /u/Thorasine</p>
             </footer>
         </div>
 
@@ -135,7 +135,5 @@
                 </div>
             </div>
         </div>
-
-        <!-- Toast thingie -->
     </body>
 </html>
