--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,7 @@
                         <blockquote id="validationCodeText" class="blockquote text-center">82BOX</blockquote>
                         <p>Once your code is set, validation will typically happen in an hour or two.</p>
                         <div id="validationExampleCollapse" class="collapse">
-                            <p> <strong>Settings > Verification ></strong> set the code then hit <strong>Save</strong>. It might take a few tries. If you keep getting an error, try it after you've restarted your client.</p>
+                            <p> <strong>Settings > Verification ></strong> set the code then hit <strong>Save</strong>. It might take a few tries. If you keep getting an error, restart your LoL client and try again!</p>
                             <video id="verificationVideo" width="465" autoplay="autoplay" loop="lopp">
                                 <source src="/video/verification.mp4" type="video/mp4" />
                             </video>
