Add summoner button is not spammable anymore, minor QoL changes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
                         <!-- Modal footer -->
                         <div class="modal-footer align-items-center">
                             <p id="newSummonerErrorText" class="text-danger mb-0"></p>
-                            <input id="newSummonerBtn" class="btn btn-primary" disabled="true" type="button" data-dismiss="//todo" value="Register" />
+                            <button id="newSummonerBtn" class="btn btn-primary" disabled="true">Register</button>
                         </div>
                     </form>
                 </div>
@@ -102,7 +102,7 @@
                         <blockquote id="validationCodeText" class="blockquote text-center">82BOX</blockquote>
                         <p>Once your code is set, validation will typically happen in an hour or two.</p>
                         <div id="validationExampleCollapse" class="collapse">
-                            <p> <strong>Settings > Verification ></strong> set the code then hit <strong>Save</strong>. It might take a few tries. If you keep getting an error, restart your LoL client and try again! If you mistyped and saved it, you have to restart your client and do it again!</p>
+                            <p> <strong>Settings > Verification ></strong> set the code then hit <strong>Save</strong>. It might take a few tries. If you keep getting an error, restart your LoL client. If you mistyped and saved it, you have to restart your client and re-type it.</p>
                             <video id="verificationVideo" width="465" autoplay="autoplay" loop="lopp">
                                 <source src="/video/verification.mp4" type="video/mp4" />
                             </video>
