--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,19 +1,29 @@
 <!doctype html>
-<html>
-    <head>
-        <title>Test</title>
-
-
-
-
-    </head>
-    <body>
-        <div id="log"></div>
-        <div>asdsda</div>
-
-        <script src="https://cdn.jsdelivr.net/npm/noty@3.2.0-beta/lib/noty.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/noty@3.2.0-beta/lib/noty.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/noty@3.2.0-beta/lib/themes/nest.css">
-        <script src="/js/test.js"></script>
-    </body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<head>
+    <meta charset="utf-8"/>
+    <title>Flairbot Alpha</title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width"/>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.2.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/noty.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/themes/sunset.css"/>
+    <!-- <link rel="stylesheet" href="/webjars/font-awesome/5.7.2/css/all.css" /> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!-- 2 hours wasted to learn that the order of js imports are important apparently -->
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="/webjars/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+    <script src="/js/noty.js"></script>
+    <script src="/js/test.js"></script>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+</head>
+<body>
+<div id="log"></div>
+<btn id="testBtn" class="mr-md-auto ml-1 btn btn-success">Test button 2</btn>
+</body>
 </html>
