Cleaning up unused dependencies

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <!-- 2 hours wasted to learn that the order of js imports are important apparently -->
         <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+        <!-- popper is important for bootstrap -->
         <script src="/webjars/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="/webjars/bootstrap/4.2.1/js/bootstrap.min.js"></script>
         <script src="/js/noty.js"></script>
