--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,30 +1,31 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-    <head>
-        <meta charset="utf-8"/>
-        <title>Flairbot Alpha login</title>
-        <meta name="description" content=""/>
-        <meta name="viewport" content="width=device-width" />
-        <base href="/"/>
-        <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.2.1/css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="/css/signin.css" />
-        <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-    </head>
-    <body class="text-center">
-        <div class="container" sec:authorize="!isAuthenticated()">
-            <form class="form-signin">
-                <h1 class="h3 mb-3 font-weight-normal">Sign in with Reddit</h1>
-                <a class="btn btn-lg btn-primary btn-block" href="/loginReddit">Sign in</a>
-            </form>
-        </div>
-        <div class="container" sec:authorize="isAuthenticated()">
-            <div class="form-signin">
-                <h1 class="h3 mb-3 font-weight-normal">You are already logged in.</h1>
-                <a class="btn btn-lg btn-danger" href="/logout">Log out</a>
-                <a class="btn btn-lg btn-primary" href="/">Go back</a>
-            </div>
-        </div>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<head>
+    <meta charset="utf-8"/>
+    <title>Flairbot Alpha login</title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width"/>
+    <base href="/"/>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/4.2.1/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/signin.css"/>
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+</head>
+<body class="text-center">
+<div class="container" sec:authorize="!isAuthenticated()">
+    <form class="form-signin">
+        <h1 class="h3 mb-3 font-weight-normal">Sign in with Reddit</h1>
+        <a class="btn btn-lg btn-primary btn-block" href="/loginReddit">Sign in</a>
+    </form>
+</div>
+<div class="container" sec:authorize="isAuthenticated()">
+    <div class="form-signin">
+        <h1 class="h3 mb-3 font-weight-normal">You are already logged in.</h1>
+        <a class="btn btn-lg btn-danger" href="/logout">Log out</a>
+        <a class="btn btn-lg btn-primary" href="/">Go back</a>
+    </div>
+</div>
 
-    </body>
+</body>
 </html>
