--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -114,7 +114,7 @@
                         take a few tries. If you keep getting an error, restart your LoL client. If you mistyped and
                         saved it, you have to restart your client and re-type it.</p>
                     <video id="verificationVideo" width="465" autoplay="autoplay" loop="lopp">
-                        <source src="/video/verification.mp4" type="video/mp4"/>
+                        <source src="/video/verification_ex.mp4" type="video/mp4"/>
                     </video>
                 </div>
             </div>
