--- a/src/main/resources/templates/indexOld.html
+++ b/src/main/resources/templates/indexOld.html
@@ -26,9 +26,9 @@
 <!-- Containers -->
 <div id="container" class="d-flex flex-column">
     <!-- Header bar -->
-    <div id="headerBar" class="d-flex shadow p-2 px-md-4 mb-3 align-items-center">
-        <a class="navbar-brand" href="/">Summoner School Flairs</a>
-        <btn id="newSummonerModalBtn" class="mr-md-auto ml-1 btn" data-toggle="modal"
+    <div id="headerBar" class="d-flex bg-dark border-bottom shadow p-2 px-md-4 mb-3 align-items-center">
+        <a class="navbar-brand text-light" href="/">Summoner School Flairs</a>
+        <btn id="newSummonerModalBtn" class="mr-md-auto ml-1 btn btn-success" data-toggle="modal"
              data-target="#modalNewSummoner">New Summoner
         </btn>
         <h6 class="mr-3 mt-1 font-weight-light text-light"
@@ -40,10 +40,10 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer d-flex flex-row-reverse w-100 p-2 mt-auto">
-        <p class="mr-1 mb-0">Report issues to:
-            <img src="images/discord-white.png" height="20" width="20"> Thorasine#4073
-            <img src="images/reddit-white.png" height="20" width="20"> /u/Thorasine</p>
+    <footer class="footer d-flex flex-row-reverse w-100 bg-dark p-2 mt-auto">
+        <p class="text-muted mr-1 mb-0">Report issues to:
+            <img src="images/discord-gray.png" height="24" width="24"> Thorasine#4073
+            <img src="images/reddit-gray.png" height="24" width="24"> /u/Thorasine</p>
     </footer>
 </div>
 
