--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,7 +7,7 @@
 <body>
 <!-- Summoner cards -->
 <div th:fragment="summonerCards" th:each="user : ${users}" class="card m-1" th:id="${user.id}">
-    <div class="card-body">
+    <div class="card-body shadow">
         <h5 th:text=${user.getSummonerName()} class="summonerName card-title"></h5>
         <h6 th:text=${user.getServer()} class="server card-subtitle mb-2 text-muted"></h6>
         <h6 th:text=${user.getRank()} class="rank card-subtitle mb-2 text-muted"></h6>
