--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,12 +28,12 @@
     <!-- Header bar -->
     <div id="headerBar" class="d-flex shadow p-2 px-md-4 mb-3 align-items-center">
         <a class="navbar-brand" href="/">Summoner School Flairs</a>
-        <btn id="newSummonerModalBtn" class="mr-md-auto ml-1 btn" data-toggle="modal"
+        <btn id="newSummonerModalBtn" class="btn btn-main mr-md-auto ml-1" data-toggle="modal"
              data-target="#modalNewSummoner">New Summoner
         </btn>
         <h6 class="mr-3 mt-1 font-weight-light text-light"
             th:text="${#authentication.getUserAuthentication().getDetails().get('name')}"></h6>
-        <a class="btn btn-md btn-danger" href="/logout">Log out</a>
+        <a class="btn btn-main btn-md btn-danger" href="/logout">Log out</a>
     </div>
     <!-- Card container -->
     <div id="cardsContainer" class="row w-100 pl-4">
@@ -85,7 +85,7 @@
                 <!-- Modal footer -->
                 <div class="modal-footer align-items-center">
                     <p id="newSummonerErrorText" class="text-danger mb-0"></p>
-                    <button id="newSummonerBtn" class="btn btn-primary" disabled="true">Register</button>
+                    <button id="newSummonerBtn" class="btn btn-main btn-primary" disabled="true">Register</button>
                 </div>
             </form>
         </div>
@@ -139,8 +139,8 @@
                 <p>Are you sure you want to delete <strong id="deleteSummonerTexts">Garbage (EUW)</strong>?</p>
                 <div class="d-flex justify-content-end align-items-center">
                     <p id="deleteSummonerErrorText" class="text-danger mb-0 mr-2"></p>
-                    <btn id="deleteConfirmBtn" class="btn btn-sm btn-danger">Delete</btn>
-                    <btn class="btn btn-sm btn-secondary mr-0 ml-1" data-dismiss="modal">Cancel</btn>
+                    <btn id="deleteConfirmBtn" class="btn btn-main btn-sm btn-danger">Delete</btn>
+                    <btn class="btn btn-main btn-sm btn-secondary mr-0 ml-1" data-dismiss="modal">Cancel</btn>
                 </div>
             </div>
         </div>
