--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/css/themes/sunset.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!-- 2 hours wasted to learn that the order of js imports are important apparently -->
+    <!-- 2 hours wasted to learn that the order of js imports are important :) -->
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <!-- popper is important for bootstrap -->
     <script src="/webjars/popper.js/1.14.3/umd/popper.min.js"></script>
